tests/fail/PlusEqual.java
package fail;
import java.lang.System;

public class PlusEqual {
    public static void main(String[] args) {
        int x;
        System.out.println(x += "hej");
    }
}
